--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.sina</groupId>
+      <artifactId>sae-local</artifactId>
+      <version>1.1.0</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/repo/sae-local-1.1.0.jar</systemPath>
+   </dependency>
+
+    <dependency>
       <groupId>org.hibernate.javax.persistence</groupId>
       <artifactId>hibernate-jpa-2.1-api</artifactId>
       <version>1.0.0.Final</version>
@@ -75,7 +83,7 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.34</version>
-    </dependency>   
+    </dependency>
     <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
@@ -106,7 +114,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+        <version>3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
