--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -7,26 +8,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>dionysus Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <repositories>
+    <repository>
+      <id>project-local</id>
+      <name>Local dependencies for project</name>
+      <url>file:${project.basedir}/repo</url>
+    </repository>
+  </repositories>
+  
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.1.4.RELEASE</spring.version>
     <hibernate.version>4.3.8.Final</hibernate.version>
     <jetty.version>9.3.0.M1</jetty.version>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>com.sina</groupId>
-      <artifactId>sae-local</artifactId>
-      <version>1.1.0</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/repo/sae-local-1.1.0.jar</systemPath>
-   </dependency>
-
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
-      <version>1.0.0.Final</version>
-    </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
@@ -37,8 +35,6 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
-
-
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -77,8 +73,6 @@
       <scope>test</scope>
     </dependency>
 
-
-
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -90,12 +84,17 @@
       <version>1.4</version>
     </dependency>
 
-
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.sina</groupId>
+      <artifactId>sae-local</artifactId>
+      <version>1.1.0</version>
     </dependency>
   </dependencies>
   <build>
