--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,12 @@
       <artifactId>sae-local</artifactId>
       <version>1.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>dionysus</finalName>
