--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>javax.ws.rs.Application</param-name>
-      <param-value>org.boilaplate.dionysus.Application</param-value>
+      <param-value>org.boilaplate.dionysus.rest.Application</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
