--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
-    <!-- <dependency>
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>5.1.3.Final</version>
+      <version>4.3.2.Final</version>
     </dependency>
     <dependency>
       <groupId>javax.el</groupId>
@@ -50,7 +50,7 @@
       <groupId>org.glassfish.web</groupId>
       <artifactId>javax.el</artifactId>
       <version>2.2.4</version>
-    </dependency> -->
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
