--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <hibernate.version>4.3.8.Final</hibernate.version>
     <jetty.version>9.3.0.M1</jetty.version>
     <slf4j.version>1.7.10</slf4j.version>
+    <jersey.version>2.4.1</jersey.version>
   </properties>
 
   <dependencies>
@@ -99,6 +100,18 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.jersey.ext</groupId>
+      <artifactId>jersey-spring3</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>${jersey.version}</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.slf4j</groupId>
