--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
       <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>1.7.2.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.inject</groupId>
