--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.1.4.RELEASE</spring.version>
     <hibernate.version>4.3.8.Final</hibernate.version>
-    <jetty.version>9.3.0.M1</jetty.version>
     <slf4j.version>1.7.10</slf4j.version>
     <jersey.version>2.4.1</jersey.version>
   </properties>
@@ -94,7 +93,7 @@
       <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
@@ -203,9 +202,9 @@
     <finalName>dionysus</finalName>
     <plugins>
       <plugin>
-        <groupId>org.eclipse.jetty</groupId>
+        <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty.version}</version>
+        <version>8.1.16.v20140903</version>
         <configuration>
           <webAppConfig>
             <contextPath>/</contextPath>
