--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
       <name>Sina app engine SDK</name>
       <url>file:${project.basedir}/repo</url>
     </repository>
+    <repository>
+      <id>restlet</id>
+      <url>http://maven.restlet.com/</url>
+    </repository>
   </repositories>
 
   <properties>
@@ -22,7 +26,7 @@
     <spring.version>4.1.4.RELEASE</spring.version>
     <hibernate.version>4.3.8.Final</hibernate.version>
     <slf4j.version>1.7.10</slf4j.version>
-    <jersey.version>2.4.1</jersey.version>
+    <restlet.version>2.0.1</restlet.version>
   </properties>
 
   <dependencies>
@@ -89,9 +93,21 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.5.0</version>
     </dependency>
 
     <dependency>
@@ -105,18 +121,6 @@
       <artifactId>javax.inject</artifactId>
       <version>1</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.glassfish.jersey.ext</groupId>
-      <artifactId>jersey-spring3</artifactId>
-      <version>${jersey.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.jersey.media</groupId>
-      <artifactId>jersey-media-json-jackson</artifactId>
-      <version>${jersey.version}</version>
-    </dependency>
-
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -197,6 +201,11 @@
       <artifactId>xercesImpl</artifactId>
       <version>2.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.7.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>dionysus</finalName>
@@ -204,7 +213,7 @@
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>8.1.16.v20140903</version>
+        <version>7.4.5.v20110725</version>
         <configuration>
           <webAppConfig>
             <contextPath>/</contextPath>
