--- a/pom.xml
+++ b/pom.xml
@@ -191,14 +191,16 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>webjars-locator</artifactId>
       <version>0.20</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>less</artifactId>
-      <version>2.3.1</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
@@ -209,11 +211,6 @@
       <groupId>org.webjars</groupId>
       <artifactId>font-awesome</artifactId>
       <version>4.3.0-1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>pure</artifactId>
-      <version>2.83</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
