--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,26 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.lesscss</groupId>
+        <artifactId>lesscss-maven-plugin</artifactId>
+        <version>1.7.0.1.1</version>
+        <configuration>
+          <sourceDirectory>${project.basedir}/src/main/webapp/less</sourceDirectory>
+          <outputDirectory>${project.build.directory}/${project.build.finalName}/css</outputDirectory>
+          <compress>true</compress>
+          <includes>
+            <include>main.less</include>
+          </includes>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.2</version>
