--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,11 @@
       <artifactId>xalan</artifactId>
       <version>2.7.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>dionysus</finalName>
