introduce client side libraries

--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,11 @@
       <artifactId>backbone-relational</artifactId>
       <version>0.8.8</version>
     </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>backbone-marionette</artifactId>
+      <version>2.0.3</version>
+    </dependency>
 
     <dependency>
       <groupId>ro.isdc.wro4j</groupId>
