--- a/pom.xml
+++ b/pom.xml
@@ -235,17 +235,6 @@
     </dependency>
 
     <dependency>
-      <groupId>ro.isdc.wro4j</groupId>
-      <artifactId>wro4j-core</artifactId>
-      <version>${wro4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>ro.isdc.wro4j</groupId>
-      <artifactId>wro4j-extensions</artifactId>
-      <version>${wro4j.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.sina</groupId>
       <artifactId>sae-local</artifactId>
       <version>1.1.0</version>
@@ -285,7 +274,18 @@
         <groupId>ro.isdc.wro4j</groupId>
         <artifactId>wro4j-maven-plugin</artifactId>
         <version>${wro4j.version}</version>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
+          <targetGroups>platform,app,all</targetGroups>
+          <destinationFolder>${basedir}/src/main/webapp/wro/</destinationFolder>
+          <contextFolder>${basedir}/src/main/webapp/</contextFolder>
           <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
         </configuration>
       </plugin>
