--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
+      <artifactId>normalize.css</artifactId>
+      <version>3.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
       <version>2.1.3</version>
     </dependency>
@@ -287,6 +292,7 @@
           <destinationFolder>${basedir}/src/main/webapp/wro/</destinationFolder>
           <contextFolder>${basedir}/src/main/webapp/</contextFolder>
           <wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
+          <!-- <wroManagerFactory>ro.isdc.wro.extensions.manager.standalone.GoogleStandaloneManagerFactory</wroManagerFactory> -->
         </configuration>
       </plugin>
       <plugin>
