--- a/src/main/webapp/WEB-INF/wro.properties
+++ b/src/main/webapp/WEB-INF/wro.properties
@@ -1,7 +1,6 @@
-preProcessors=jsMin
 connectionTimeout=3000
 debug=true
 modelUpdatePeriod=10
 cacheUpdatePeriod=10
 preProcessors=cssUrlRewriting,cssImport,semicolonAppender
-postProcessors=lessCss
+postProcessors=cssMin,lessCss
