--- a/pom.xml
+++ b/pom.xml
@@ -205,21 +205,6 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
-      <artifactId>autoprefixer</artifactId>
-      <version>2.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>font-awesome</artifactId>
-      <version>4.3.0-1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
-      <artifactId>normalize.css</artifactId>
-      <version>3.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
       <version>2.1.3</version>
     </dependency>
@@ -237,6 +222,11 @@
       <groupId>org.webjars</groupId>
       <artifactId>backbone-marionette</artifactId>
       <version>2.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>3.3.2</version>
     </dependency>
 
     <dependency>
