add restful example

--- a/src/main/webapp/WEB-INF/wro.properties
+++ b/src/main/webapp/WEB-INF/wro.properties
@@ -2,5 +2,5 @@ connectionTimeout=3000
 debug=true
 modelUpdatePeriod=10
 cacheUpdatePeriod=10
-preProcessors=cssUrlRewriting,cssImport,semicolonAppender
-postProcessors=cssMin,lessCss
+preProcessors=cssUrlRewriting,cssImport,lessCss,semicolonAppender
+postProcessors=cssMin
