--- a/pom.xml
+++ b/pom.xml
@@ -225,8 +225,8 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
-      <artifactId>bootstrap</artifactId>
-      <version>3.3.2</version>
+      <artifactId>normalize.css</artifactId>
+      <version>3.0.2</version>
     </dependency>
 
     <dependency>
