--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
-    <url-pattern>/api/*</url-pattern>
+    <url-pattern>/api/v1/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
