--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
       <artifactId>spring-data-jpa</artifactId>
       <version>1.7.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-rest-webmvc</artifactId>
+      <version>2.2.2.RELEASE</version>
+    </dependency>
 
     <dependency>
       <groupId>javax.inject</groupId>
