--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.2.1.RELEASE</version>
+    <version>1.1.10.RELEASE</version>
   </parent>
 
   <repositories>
@@ -30,6 +30,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.6</java.version>
+    <tomcat.version>7.0.57</tomcat.version>
     <wro4j.version>1.7.7</wro4j.version>
   </properties>
 
