--- a/dionysus-core/pom.xml
+++ b/dionysus-core/pom.xml
@@ -9,15 +9,18 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.dionysus</groupId>
   <artifactId>dionysus-core</artifactId>
   <packaging>jar</packaging>
-  <name>Dionysus Core</name>
+  <name>Dionysus Domain Objects</name>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
