--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.dionysus</groupId>
       <artifactId>dionysus-core</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
     
     <dependency>
