--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>dionysus-parent</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>Dionysus Parent Project</name>
+	<name>Dionysus</name>
 	<url>https://github.com/luj1985/dionysus</url>
 
   <properties>
