seperate out client side code into individual project

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 	<modules>
     <module>dionysus-core</module>
     <module>dionysus-rest</module>
+    <module>dionysus-client</module>
     <module>dionysus-webapp</module>
   </modules>
 
