--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "marionette": "~2.3.2"
   }
 }
