--- a/dionysus-client/yo/package.json
+++ b/dionysus-client/yo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yo",
+  "name": "dionysus-client",
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
     "grunt": "^0.4.5",
