use parent project, otherwise dependency management doesn't work

--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -61,8 +61,8 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
 		</dependency>
 	</dependencies>
 
