split client side code into modules

--- a/dionysus-client/yo/.jshintrc
+++ b/dionysus-client/yo/.jshintrc
@@ -18,5 +18,5 @@
   "trailing": true,
   "smarttabs": true,
   "jquery": true,
-  "predef": [ "Marionette" ]
+  "predef": [ "Marionette", "Dionysus" ]
 }
