add backbone.relational library

--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "modernizr": "~2.8.2",
     "marionette": "~2.3.2",
-    "materialize": "~0.95.2"
+    "materialize": "~0.95.2",
+    "backbone.relational": "~0.9.0"
   }
 }
