--- a/dionysus-core/src/main/resources/application-prod.properties
+++ b/dionysus-core/src/main/resources/application-prod.properties
@@ -1,5 +1,3 @@
-spring.jpa.generate-ddl: true
-spring.jpa.show-sql: true
-spring.jpa.database: mysql
-spring.datasource.test-on-borrow: true
-spring.datasource.validation-query: SELECT 1
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+spring.jpa.database=mysql
