--- a/dionysus-core/src/main/resources/application.properties
+++ b/dionysus-core/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-logging.level.org.springframework: INFO
+logging.level.org.springframework=INFO
+
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
