seperate bae appid secretkey

--- a/dionysus-core/src/main/resources/application-prod.properties
+++ b/dionysus-core/src/main/resources/application-prod.properties
@@ -2,10 +2,14 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 
+bae.appid=xN3Lv2liVPWHfu5ywr0UPWoT
+bae.secretkey=L7Yc5LOT2SgYtZidaN0eHFQ1ZLLnGh8c
+bae.mysqldb=SHZCffxtwwoGmGUwxoZb
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://sqld.duapp.com:4050/SHZCffxtwwoGmGUwxoZb
-spring.datasource.username=xN3Lv2liVPWHfu5ywr0UPWoT
-spring.datasource.password=L7Yc5LOT2SgYtZidaN0eHFQ1ZLLnGh8c
+spring.datasource.url=jdbc:mysql://sqld.duapp.com:4050/${bae.mysqldb}
+spring.datasource.username=${bae.appid}
+spring.datasource.password=${bae.secretkey}
 spring.datasource.test-on-borrow=true
 spring.datasource.test-while-idle=true
 spring.datasource.validation-query=SELECT 1
