seperate out bae dependency

--- a/dionysus-client/pom.xml
+++ b/dionysus-client/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>dionysus-client</artifactId>
 	<packaging>pom</packaging>
-	<name>Dionysus Client</name>
+	<name>Dionysus Web Client</name>
 	<build>
 		<plugins>
 			<plugin>
