--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>dionysus-core</module>
     <module>dionysus-rest</module>
     <module>dionysus-client</module>
+    <module>dionysus-bae</module>
     <module>dionysus-webapp</module>
   </modules>
 </project>
