--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <tomcat.version>7.0.59</tomcat.version>
+    <lightadmin.version>1.0.1.RELEASE</lightadmin.version>
   </properties>
 
   <parent>
@@ -28,6 +29,7 @@
     <module>dionysus-rest</module>
     <module>dionysus-client</module>
     <module>dionysus-bae</module>
+    <module>dionysus-admin</module>
     <module>dionysus-webapp</module>
   </modules>
 </project>
