use before_install instead

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
-before_script:
-  - sudo npm install -g grunt-cli
-  - sudo npm install -g bower
-
 language: java
-
 jdk:
   - openjdk7
+
+before_install:
+  - npm install -g grunt-cli
+  - npm install -g bower
