make lightadmin runnable in dionysus-webapp module

--- a/dionysus-webapp/pom.xml
+++ b/dionysus-webapp/pom.xml
@@ -76,6 +76,11 @@
 			<scope>provided</scope>
 		</dependency>
     <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-messaging</artifactId>
     </dependency>
