add articles list support

--- a/dionysus-client/yo/.jshintrc
+++ b/dionysus-client/yo/.jshintrc
@@ -18,5 +18,5 @@
   "trailing": true,
   "smarttabs": true,
   "jquery": true,
-  "predef": [ "Marionette", "Dionysus" ]
+  "predef": [ "Marionette", "Dionysus", "Backbone", "SockJS", "Stomp" ]
 }
