extract storage service

--- a/dionysus-bae/pom.xml
+++ b/dionysus-bae/pom.xml
@@ -32,6 +32,11 @@
 	</repositories>
 
 	<dependencies>
+    <dependency>
+      <groupId>com.huixinpn.dionysus</groupId>
+      <artifactId>dionysus-rest</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
