--- a/dionysus-bae/pom.xml
+++ b/dionysus-bae/pom.xml
@@ -34,7 +34,7 @@
 	<dependencies>
     <dependency>
       <groupId>com.huixinpn.dionysus</groupId>
-      <artifactId>dionysus-rest</artifactId>
+      <artifactId>dionysus-core</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
