--- a/dionysus-rest/pom.xml
+++ b/dionysus-rest/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>dionysus-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+    <dependency>
+      <groupId>com.huixinpn.dionysus</groupId>
+      <artifactId>dionysus-runtime</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 		<dependency>
 			<groupId>com.huixinpn.dionysus</groupId>
 			<artifactId>dionysus-bae</artifactId>
