--- a/dionysus-admin/pom.xml
+++ b/dionysus-admin/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>dionysus-admin</artifactId>
 	<packaging>jar</packaging>
-	<name>Dionysus Admin Console</name>
+	<name>Dionysus Administration Web UI</name>
 
 	<dependencies>
 		<dependency>
