use bower semantic ui package

--- a/dionysus-client/yo/bower.json
+++ b/dionysus-client/yo/bower.json
@@ -2,11 +2,11 @@
   "name": "yo",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.8.2",
     "marionette": "~2.3.2",
+    "backbone.intercept": "~0.3.2",
     "sockjs": "~0.3.4",
     "stomp-websocket": "~2.3.4",
-    "backbone.intercept": "~0.3.2",
-    "froala": "~1.2.6"
+    "froala": "~1.2.6",
+    "semantic-ui": "~1.11.6"
   }
 }
