tests module can run with /app/tests/1

--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 management.context-path=/actuator
 management.security.enabled=false
-
+spring.datasource.sql-script-encoding=UTF-8
 spring.main.show_banner=false
