expose baidu storage as @Service, just use @Autowired can be introduced. Delete StorageConfiguration.java for no need any more.

--- a/dionysus-webapp/src/main/resources/application.properties
+++ b/dionysus-webapp/src/main/resources/application.properties
@@ -2,3 +2,8 @@ management.context-path=/actuator
 management.security.enabled=false
 spring.datasource.sql-script-encoding=UTF-8
 spring.main.show_banner=false
+
+baidu.accessKey=xN3Lv2liVPWHfu5ywr0UPWoT
+baidu.secretKey=L7Yc5LOT2SgYtZidaN0eHFQ1ZLLnGh8c
+baidu.endPoint=bcs.duapp.com
+baidu.bucket=dionysus-files
